	* il_squish.cpp: Added file.
	* il_dds-save.c: Added line 688.
	* il_states.c: Added lines for libsquish support.
	* il_dds-save.c (Compress): Added libsquish compression.
	* il_io.c (ilDetermineTypeF/L and ilIsValid/F/L): Added VTF, SUN and EXR.
	* il_io.c (ilIsValidF/L): Added TIF
	* il_jp2.c:131-137:Added these lines to take care of erroneous error generated by JasPer's buffering.
	* il_jp2.c: Added functions to save JPEG 2000 images.
	* il_utility.c (ilGetBppFormat): Added IL_ALPHA.
	* il_jp2.c (iLoadJp2Internal): Added 1 and 2 channel format loading.
	* il_dds-save.c:700-701: Changed to IL_RGBA.
	* il_dds-save.c (ChooseEndpoints): Changed to use norm squared instead of a sum of the components.
	* il_dds-save.c (GetBlock): Changed to copy adjacent data if it goes beyond the bounds of the image.
	* il_icon.c: Removed extra whitespace.
	* il_icns.c / il_internal.h: Added ilIsValidIcns*.
	* il_icns.h: Changed comments on ICNSDATA.
	* il_exr.c: Added ilIsValidExr*.
	* il_io.c (ilLoadF): Uncommented ilLoadJp2F.
	* il_dds-save.c (CompressTo565): Changed 24-bit to 16-bit code based on Charles Bloom's rant.
	* il_dds.c (DxtcReadColor/DxtcReadColors): Changed conversion to copy high bits to lowest bits as well.
	* il_io.c: Reenabled PhotoCD support.
	* il_pcd.c (iLoadPcdInternal): Added check for end-of-file.
	* il_exr.c: Added EXR saving functions.
	
2009-01-15 Matěj Týč <bubla@sf.net>
	* il_io.h, include/IL/il.h, il_states.h: Changed some normal strings to constant
	strings (in ilSave, ilIsValid and ilGetString)
	* configure.ac, lib/Makefile.am: Added wbmp compilation support
	* il_jp2.c, il_wbmp.c: Fixed a typo that prevented compilation 
	* include/IL/devil_cpp_wrapper.hpp: Added a hopefully harmless solution for
	the initialization of devil.

2009-01-16 Denton woods <doomwiz@users.sf.net>
	* Updated x64 projects

2009-01-19 Denton woods <doomwiz@users.sf.net>
	* il_hdr.c: Changed line 73 to have space for terminating NULL.
	